Se agrego un box-sizing y ahora el nothingScreen se coloca debajo del sidebar

--- a/src/styles/_mediaqueries.scss
+++ b/src/styles/_mediaqueries.scss
@@ -1,10 +1,15 @@
 @media (max-width: 321px) {
     .journal__main-content {
         flex-direction: column;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
     }
 
     .journal__sidebar {
+        width: 100vw;
+        height: 40vh;
+    }
+
+    .nothing__main-content {
         width: 100vw;
     }
 }
