Ahora oculta las notas y les da un overflow

--- a/src/styles/_mediaqueries.scss
+++ b/src/styles/_mediaqueries.scss
@@ -6,7 +6,11 @@
 
     .journal__sidebar {
         width: 100vw;
-        height: 40vh;
+        height: 37vh;
+    }
+
+    .journal__entries {
+        flex-direction: row;
     }
 
     .nothing__main-content {
